# watchy_zephyr_app

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
boards/sqfmi/watchy/: Kconfig  Kconfig.defconfig  Kconfig.watchy  board.cmake  board.yml  watchy-pinctrl.dtsi  watchy_appcpu.dts  watchy_appcpu.yaml  watchy_procpu.dts  watchy_procpu.yaml
cmake/: lvgl_font.cmake  lvgl_image.cmake
docs/: app_arch.md
patch/: 0001-Fix-for-display-of-watchy.patch
script/: img_convert.py
src/: battery.c  buttons.c  buttons.h  cat.c  cat_200x200.c  cat_image.h  display.c  main.c  network.c  rtc.c  sensors.c
src/EPD_W21/: EPAPER.h
src/app/: app_interface.h  app_manager.c  app_manager.h  gpio_event.c  gpio_event.h
src/app/counter/: counter_app.c
src/app/images/: images_app.c
src/app/notification/: notification_app.c
src/app/watchface/: segments_wf_app.c  watchface_app.c
src/lib/: ancs.c  ancs.h  rtc.c  rtc.h
